# stevana.github.io

./: CHANGELOG.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md  about.html  cabal.project  cabal.project.freeze  chronological.html  coverage-guided_property-based_testing.html  deploying_and_restarting_state_machines_using_supervisor_trees.html  deploying_and_restarting_state_machines_using_supervisor_trees.txt  domain-specific_debuggers.html  domain-specific_debuggers.txt  elastically_scalable_thread_pools.html  elastically_scalable_thread_pools.txt  erlangs_not_about_lightweight_processes_and_message_passing.html  erlangs_not_about_lightweight_processes_and_message_passing.txt  hot-code_swapping_a_la_erlang_with_arrow-based_state_machines.html  hot-code_swapping_a_la_erlang_with_arrow-based_state_machines.txt  implementing_behaviours.html  implementing_behaviours.txt  index.html  introduction_to_simulation_testing.html  modular_state_machines.html  modular_state_machines.txt  on_the_role_of_practice_in_programming.html  on_the_role_of_practice_in_programming.txt  parallel_property-based_testing_with_a_deterministic_thread_scheduler.html  parallel_stream_processing_with_zero-copy_fan-out_and_sharding.html  parallel_stream_processing_with_zero-copy_fan-out_and_sharding.txt  pipelined_state_machines.html  pipelined_state_machines.txt  rss.xml  scheduling_threads_like_thomas_jefferson.html  script.js  shell.nix  simulation_testing_using_state_machines.html  simulation_testing_using_state_machines.txt  (+18 more)
.github/workflows/: main.yaml
app/: Main.hs
data/: content.yaml  header.sh  html5.template  style.css  talk.template
data/talk/: bobkonf-2025.md  hytradboi-2025.md
src/: Download.hs  Generate.hs  LibMain.hs  Parse.hs  RssFeed.hs  Types.hs
talk/: bobkonf-2025.html  hytradboi-2025.html
