cabal-version:   3.0
name:            stevana-github-io
version:         0.0.0
synopsis:        Static website generator for GitHub Pages.
description:
  Please see the README on Github at <https://github.com/stevana/stevana.github.io#readme>

license:         ISC
license-file:    LICENSE
author:          Stevan Andjelkovic
maintainer:      stevana@users.noreply.github.com
copyright:       Copyright (c) 2023-2024 Stevan Andjelkovic
category:        Web
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  NOTES.md

data-files:
  data/content.yaml
  data/github.svg
  data/html5.template
  data/rss.svg
  data/style.css

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Download
    Generate
    LibMain
    Parse
    RssFeed
    Types

  autogen-modules:  Paths_stevana_github_io
  other-modules:    Paths_stevana_github_io

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        ^>=4.17.0.0
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , time

  -- Other dependencies:
  build-depends:
    , aeson
    , doctemplates
    , http-client
    , http-client-tls
    , http-types
    , pandoc
    , yaml

  hs-source-dirs:   src
  default-language: Haskell2010

executable exe
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , stevana-github-io

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , stevana-github-io

source-repository head
  type:     git
  location: https://github.com/stevana/stevana.github.io
